css/style.css
/* ... */
table {
  border-collapse: collapse;
  border-spacing: 0; }


/********************************** FONTS ************************************/
@font-face {
  font-family: "Suisse Int'l"; 
  src: url("//db.onlinewebfonts.com/t/13ab13418f633c1b0516fed6e30bedbc.eot"); 
  src: url("//db.onlinewebfonts.com/t/13ab13418f633c1b0516fed6e30bedbc.eot?#iefix") format("embedded-opentype"), 
  url("//db.onlinewebfonts.com/t/13ab13418f633c1b0516fed6e30bedbc.svg#Suisse Int'l") format("svg"),
  url("../assets/fonts/Suisse\ BP\ Int\'l\ Regular.woff"); 
  font-weight: 500;
}

@font-face {
  font-family: "Suisse Int'l"; 
  src: url("//db.onlinewebfonts.com/t/501e03d4c0303f394033bcaf435f4b3e.eot"); 
  src: url("//db.onlinewebfonts.com/t/501e03d4c0303f394033bcaf435f4b3e.eot?#iefix") format("embedded-opentype"), 
  url("//db.onlinewebfonts.com/t/501e03d4c0303f394033bcaf435f4b3e.svg#Suisse Int'l Medium") format("svg"),
  url("../assets/fonts/Suisse\ BP\ Int\'l\ Medium.woff"); 
  font-weight: 600;
}

@font-face {
  font-family: "Suisse Int'l"; 
  src: url("//db.onlinewebfonts.com/t/8e52b05f6b6c1a65b0c49c8286f690b2.eot"); 
  src: url("//db.onlinewebfonts.com/t/8e52b05f6b6c1a65b0c49c8286f690b2.eot?#iefix") format("embedded-opentype"), 
  url("//db.onlinewebfonts.com/t/8e52b05f6b6c1a65b0c49c8286f690b2.svg#Suisse Int'l Bold") format("svg"),
  url("../assets/fonts/Suisse\ BP\ Int\'l\ Bold.woff");
  font-weight: 700;
}

@font-face {
  font-family: "Suisse Mono";
  src: url("https://db.onlinewebfonts.com/t/008acf881eac29f0c639b8e2345a1764.eot"); /* IE9*/
  src: url("https://db.onlinewebfonts.com/t/008acf881eac29f0c639b8e2345a1764.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
  url("https://db.onlinewebfonts.com/t/008acf881eac29f0c639b8e2345a1764.woff2") format("woff2"), /* chrome firefox */
  url("https://db.onlinewebfonts.com/t/008acf881eac29f0c639b8e2345a1764.woff") format("woff"), /* chrome firefox */
  url("https://db.onlinewebfonts.com/t/008acf881eac29f0c639b8e2345a1764.ttf") format("truetype"), /* chrome firefox opera Safari, Android, iOS 4.2+*/
  url("https://db.onlinewebfonts.com/t/008acf881eac29f0c639b8e2345a1764.svg#Suisse Int'l Mono") format("svg"), /* iOS 4.1- */
  url("../assets/fonts/Suisse\ Mono\ Regular.woff"),
  url("../assets/fonts/Suisse\ Mono\ Regular.woff2");
}

@font-face {
  font-family: "Suisse Works";
  src: url("../assets/fonts/Suisse\ Works\ Regular.otf") format("opentype");
  font-weight: 500;
}

@font-face {
  font-family: "Suisse Works";
  src: url("../assets/fonts/Suisse\ Works\ Medium.otf") format("opentype");
  font-weight: 600;
}



/******************************* RESPONSIVENESS ******************************/
@media only screen and (max-width: 1023px) {
  #work-tab div .work-item div h3 { font-size: 1.3rem; padding: 0.17rem; height: initial; }
  #content #work-tab .work-item { grid-template-columns: 10% 90%; }
  #work-tab .work-item div { width: 80%; }
}

@media only screen and (max-width: 767px) {
  /* Header */
  #header { margin-bottom: 3rem; }
  #headline { margin-bottom: 2rem; }
  #content #headline-text { font-size: 2rem; }

  /* Landing */
  #intro #message { font-size: 1.6rem; margin-bottom: 3rem; width: 100%; }

  /* Main */
  #content #work-tab { grid-template-columns: 100%; }
  #content #work-tab div h2 { display: none; }
  #work-tab div .work-item { grid-template-columns: 10% 90%; grid-template-rows: 12rem; }
  #work-tab div .work-item div { width: 100%; }
  #work-tab div .work-item div h3 { font-size: 1.3rem; padding: 0.17rem; height: initial; }
  #content #about-tab { grid-template-columns: 100%; grid-template-rows: 70vw; }
  #content #about-tab #portrait { border-radius: 3px; height: 60vw; margin-right: 0; }
  #work-tab .work-item .numerate { font-size: 0.9rem; }
  #content #work-tab .work-item div { width: 100%; }
  #work-tab > div:last-child { display: none; }

  /* Work */
  #content .work-content { margin: 0 auto 5rem; }
  #content .work-content h3 { margin: 3rem 0; font-size: 1.5rem; }
  #content .work-container .content { flex-direction: column; }
  /* #content .work-container .content .sticky-image { position: static; width: 100%; margin: 0 0 10vw 0; height: 60vh; } */
  #content .work-container .content .sticky-image { position: fixed; width: 75%; margin: 0 0 10vw 0; height: 60vh; z-index: -1; top: 11.5rem; }
  #content .work-container .content .narrative { width: 100%; }
  #content .work-content .details { flex-direction: column; padding: 1.5rem; margin: 68vh 0 10vw; }
  #content .work-content .details div { width: 100%; max-width: 100%; padding: 0; margin-bottom: 1.5rem; }
  #content .narrative { z-index: -1; }

  /* Contact */
  body #contact { font-size: 1rem; font-weight: 500; display: flex; justify-content: space-between; float: none; width: 100%; margin: auto; }
  body #contact a:not(:last-child) { margin: 0; }

  body .spacer6 { margin-bottom: 20vw; }
  body .spacer5 { margin-bottom: 15vw; }
  body .spacer4 { margin-bottom: 10vw; }
  body .spacer3 { margin-bottom: 3rem; }
  body .spacer2 { margin-bottom: 6vw; }
  body .spacer1 { margin-bottom: 3vw; }
}

@media only screen and (max-width: 500px) {
  #content #contact > div { margin-right: 1rem; }
  #content #contact a:not(:first-child):not(:last-child) { margin-right: 1rem; }
  #content #contact .external { width: 0.5rem; height: 0.5rem; }
  #contact a { font-size: 0.8rem; }
  #content .work-content .work-header { -webkit-box-shadow: 0 30px 10px -30px #111; -moz-box-shadow: 0 30px 10px -30px #111; box-shadow: 0 30px 10px -30px #111; }
  #content #ip-img + .narrative { margin-top: 120vw; }
  #content .narrative .logo { width: 50%; }
}

@media only screen and (max-width: 340px) {
  #content #contact .external { display: none; }
}



/********************************** VARIABLES ********************************/
.spacer6 { margin-bottom: 15vw; }
.spacer5 { margin-bottom: 10vw; }
.spacer4 { margin-bottom: 6vw; }
.spacer3 { margin-bottom: 4vw; }
.spacer2 { margin-bottom: 2vw; }
/* ... */

